Link with libunistring, if it exists.

--- a/gettext-tools/gnulib-lib/.gitignore
+++ b/gettext-tools/gnulib-lib/.gitignore
@@ -146,6 +146,7 @@
 /javaversion.class
 /javaversion.h
 /javaversion.java
+/libunistring.valgrind
 /localcharset.c
 /localcharset.h
 /locale.in.h
@@ -292,15 +293,15 @@
 /tputs.c
 /trim.c
 /trim.h
-/uniconv.h
-/unilbrk.h
-/uniname.h
+/uniconv.in.h
+/unilbrk.in.h
+/uniname.in.h
 /unistd--.h
 /unistd-safer.h
 /unistd.in.h
-/unistr.h
-/unitypes.h
-/uniwidth.h
+/unistr.in.h
+/unitypes.in.h
+/uniwidth.in.h
 /unlocked-io.h
 /unsetenv.c
 /vasnprintf.c
