--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -323,36 +323,114 @@ AC_ARG_WITH([cvs],
                           (deprecated)],
   [gt_use_cvs=$withval],
   [gt_use_cvs=no])
+AC_ARG_WITH([bzip2],
+  [  --without-bzip2         don't use bzip2 to compress the infrastructure archive],
+  [gt_use_bzip2=$withval],
+  [gt_use_bzip2=maybe])
+AC_ARG_WITH([xz],
+  [  --without-xz            don't use xz to compress the infrastructure archive],
+  [gt_use_xz=$withval],
+  [gt_use_xz=maybe])
 # The CVS format is deprecated, because "cvs init" does not work in all
 # circumstances
 # (see <http://lists.gnu.org/archive/html/bug-cvs/2010-05/msg00003.html>)
 # and we are not allowed to distribute the cvs infrastructure files ourselves
 # (see <http://lists.gnu.org/archive/html/bug-cvs/2010-06/msg00011.html>).
-if test "$gt_use_git" != no && test "$gt_use_git" != maybe; then
-  # --with-git is specified. Even if --with-cvs is also specified, we use the
-  # git format.
-  ARCHIVE_FORMAT=git
+#
+# With the archive from version 0.18.1, we can observe the following
+# compression rates:
+#    Size           File
+#  16916480   archive.dir.tar
+#   3528757   archive.dir.tar.gz
+#   2621440   archive.cvs.tar
+#   2082492   archive.dir.tar.bz2
+#    696320   archive.git.tar
+#    599046   archive.git.tar.bz2
+#    592989   archive.git.tar.gz
+#    588124   archive.git.tar.xz
+#    457190   archive.cvs.tar.gz
+#    335808   archive.cvs.tar.bz2
+#    308880   archive.dir.tar.xz
+#    299124   archive.cvs.tar.xz
+# Among these:
+#   - We don't offer the uncompressed ones, because at least gzip can be
+#     assumed to be present everywhere.
+#   - Among archive.git.tar.*, all have approximately the same size, because
+#     git already compresses most of its repository data. Offer only .gz here.
+#   - Among archive.cvs.tar.*, offer only .gz, for simplicity, since --with-cvs
+#     is deprecated.
+# The remaining ones are:
+#    Size           File            ARCHIVE_FORMAT
+#   3528757   archive.dir.tar.gz      dirgz
+#   2082492   archive.dir.tar.bz2     dirbz2
+#    592989   archive.git.tar.gz      git
+#    457190   archive.cvs.tar.gz      cvs
+#    308880   archive.dir.tar.xz      dirxz
+if test "$gt_use_xz" != no && test "$gt_use_xz" != maybe; then
+  # --with-xz is specified. Even if --with-git or --with-cvs or --with-bzip2 is
+  # also specified, we use the dirxz format.
+  ARCHIVE_FORMAT=dirxz
 else
-  if test "$gt_use_cvs" != no; then
-    # --with-cvs is specified.
-    ARCHIVE_FORMAT=cvs
+  if test "$gt_use_git" != no && test "$gt_use_git" != maybe; then
+    # --with-git is specified. Even if --with-cvs or --with-bzip2 is also
+    # specified, we use the git format.
+    ARCHIVE_FORMAT=git
   else
-    # Neither --with-git nor --with-cvs is specified.
-changequote(,)dnl
-    if test "$gt_use_git" != no \
-       && (git --version) >/dev/null 2>&1 \
-       && { case `git --version | sed -e 's/^[^0-9]*//'` in
-              0.* | 1.[0-5].*) false ;;
-              *) true ;;
-            esac
-          }; then
-changequote([,])dnl
-      # --without-git is not specified, and the git program exists
-      # in version 1.6 or newer. Use git format.
-      ARCHIVE_FORMAT=git
+    if test "$gt_use_cvs" != no; then
+      # --with-cvs is specified. Even if --with-bzip2 is also specified, we use
+      # the cvs format.
+      ARCHIVE_FORMAT=cvs
     else
-      # --without-git is specified, or the git program is missing.
-      ARCHIVE_FORMAT=dir
+      if test "$gt_use_bzip2" != no && test "$gt_use_bzip2" != maybe; then
+        # --with-bzip2 is specified. We use the dirbz2 format.
+        ARCHIVE_FORMAT=dirbz2
+      else
+        # Neither --with-git nor --with-cvs nor --with-bzip2 nor --with-xz is
+        # specified. Determine which programs are present.
+        if test "$gt_use_xz" != no \
+           && (xz --version) >/dev/null 2>&1 \
+           && xz --version | grep lzma >/dev/null; then
+          # --without-xz is not specified, and the xz program exists.
+          ARCHIVE_FORMAT=dirxz
+        else
+          # --without-xz is specified, or the xz program is missing.
+changequote(,)dnl
+          if test "$gt_use_git" != no \
+             && (git --version) >/dev/null 2>&1 \
+             && { case `git --version | sed -e 's/^[^0-9]*//'` in
+                    0.* | 1.[0-5].*) false ;;
+                    *) true ;;
+                  esac
+                }; then
+changequote([,])dnl
+            # --without-git is not specified, and the git program exists
+            # in version 1.6 or newer. Use git format.
+            ARCHIVE_FORMAT=git
+          else
+            # --without-git is specified, or the git program is missing.
+changequote(,)dnl
+            if test "$gt_use_bzip2" != no \
+               && (: | bzip2 --version) >/dev/null 2>&1 \
+               && { sed_bzip2_version1='s/ \([0-9][0-9.]*\).*/ \1/'
+                    sed_bzip2_version2='s/^.* //'
+                    case `(: | bzip2 --version) 2>&1 \
+                          | sed -e 1q \
+                          | sed -e "$sed_bzip2_version1" -e "$sed_bzip2_version2"` in
+                      0.*) false ;;
+                      *) true ;;
+                    esac
+                  }; then
+changequote([,])dnl
+              # --without-bzip2 is not specified, and the bzip2 program exists
+              # in version 1.0 or newer. Use dirbz2 format.
+              ARCHIVE_FORMAT=dirbz2
+            else
+              # --without-bzip2 is specified, or the bzip2 program is missing.
+              ARCHIVE_FORMAT=dirgz
+            fi
+          fi
+        fi
+      fi
     fi
   fi
 fi
