--- a/gettext-tools/po/POTFILES.in
+++ b/gettext-tools/po/POTFILES.in
@@ -31,6 +31,7 @@ src/format.c
 src/format-awk.c
 src/format-boost.c
 src/format-c.c
+src/format-c-parse.h
 src/format-csharp.c
 src/format-elisp.c
 src/format-gcc-internal.c
