--- a/gettext-tools/libgettextpo/.gitignore
+++ b/gettext-tools/libgettextpo/.gitignore
@@ -25,6 +25,7 @@
 /concat-filename.h
 /config.charset
 /diffseq.h
+/dosname.h
 /errno.in.h
 /error-progname.c
 /error-progname.h
@@ -37,8 +38,10 @@
 /file-ostream.oo.h
 /filename.h
 /float+.h
+/float.c
 /float.in.h
 /fopen.c
+/fstat.c
 /fstrcmp.c
 /fstrcmp.h
 /fwriteerror.c
@@ -50,7 +53,9 @@
 /gettext.h
 /hash.c
 /hash.h
+/iconv.c
 /iconv.in.h
+/iconv_close.c
 /iconv_open-aix.gperf
 /iconv_open-hpux.gperf
 /iconv_open-irix.gperf
@@ -59,6 +64,7 @@
 /iconv_open.c
 /iconveh.h
 /intprops.h
+/itold.c
 /libunistring.valgrind
 /localcharset.c
 /localcharset.h
@@ -74,17 +80,23 @@
 /memchr.valgrind
 /minmax.h
 /moo.h
+/msvc-inval.c
+/msvc-inval.h
+/msvc-nothrow.c
+/msvc-nothrow.h
 /obstack.c
 /obstack.h
 /open.c
 /ostream.oo.c
 /ostream.oo.h
+/pathmax.h
 /printf-args.c
 /printf-args.h
 /printf-parse.c
 /printf-parse.h
 /progname.c
 /progname.h
+/raise.c
 /realloc.c
 /ref-add.sin
 /ref-del.sin
@@ -104,6 +116,8 @@
 /stpcpy.c
 /str-two-way.h
 /streq.h
+/strerror-override.c
+/strerror-override.h
 /strerror.c
 /striconv.c
 /striconv.h
