--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -116,6 +116,7 @@ TESTS = gettext-1 gettext-2 gettext-3 gettext-4 gettext-5 gettext-6 gettext-7 \
 	format-lisp-1 format-lisp-2 \
 	format-php-1 format-php-2 \
 	format-python-1 format-python-2 \
+	format-python-brace-1 format-python-brace-2 \
 	format-pascal-1 format-pascal-2 \
 	format-perl-1 format-perl-2 \
 	format-perl-brace-1 format-perl-brace-2 \
