--- a/gettext-tools/po/POTFILES.in
+++ b/gettext-tools/po/POTFILES.in
@@ -41,13 +41,16 @@ src/format-gcc-internal.c
 src/format-gfc-internal.c
 src/format-invalid.h
 src/format-java.c
+src/format-javascript.c
 src/format-librep.c
 src/format-lisp.c
+src/format-lua.c
 src/format-pascal.c
 src/format-perl.c
 src/format-perl-brace.c
 src/format-php.c
 src/format-python.c
+src/format-python-brace.c
 src/format-qt.c
 src/format-qt-plural.c
 src/format-scheme.c
@@ -102,8 +105,10 @@ src/x-csharp.c
 src/x-elisp.c
 src/x-glade.c
 src/x-java.c
+src/x-javascript.c
 src/x-librep.c
 src/x-lisp.c
+src/x-lua.c
 src/x-perl.c
 src/x-php.c
 src/x-po.c
